--- a/html/starter-kit.html
+++ b/html/starter-kit.html
@@ -24,10 +24,10 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="../../dist/css/style.min.css" rel="stylesheet" />
+    <link href="../dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -80,13 +80,13 @@
                   <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                   <!-- Dark Logo icon -->
                   <img
-                    src="../../assets/images/logo-icon.png"
+                    src="../assets/images/logo-icon.png"
                     alt="homepage"
                     class="dark-logo"
                   />
                   <!-- Light Logo icon -->
                   <img
-                    src="../../assets/images/logo-light-icon.png"
+                    src="../assets/images/logo-light-icon.png"
                     alt="homepage"
                     class="light-logo"
                   />
@@ -96,13 +96,13 @@
                 <span class="logo-text">
                   <!-- dark Logo text -->
                   <img
-                    src="../../assets/images/logo-text.png"
+                    src="../assets/images/logo-text.png"
                     alt="homepage"
                     class="dark-logo"
                   />
                   <!-- Light Logo text -->
                   <img
-                    src="../../assets/images/logo-light-text.png"
+                    src="../assets/images/logo-light-text.png"
                     class="light-logo"
                     alt="homepage"
                   />
@@ -178,7 +178,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="../../assets/images/users/1.jpg"
+                    src="../assets/images/users/1.jpg"
                     alt="user"
                     class="rounded-circle"
                     width="31"
@@ -307,7 +307,7 @@
         <div class="page-breadcrumb">
           <div class="row">
             <div class="col-5 align-self-center">
-              <h4 class="page-title">Basic Table</h4>
+              <h4 class="page-title">Starter Page</h4>
             </div>
             <div class="col-7 align-self-center">
               <div class="d-flex align-items-center justify-content-end">
@@ -317,7 +317,7 @@
                       <a href="#">Home</a>
                     </li>
                     <li class="breadcrumb-item active" aria-current="page">
-                      Basic Table
+                      Starter Page
                     </li>
                   </ol>
                 </nav>
@@ -337,181 +337,10 @@
           <!-- ============================================================== -->
           <div class="row">
             <div class="col-12">
-              <div class="card card-body">
-                <h4 class="card-title">Default Forms</h4>
-                <h5 class="card-subtitle">All bootstrap element classies</h5>
-                <form class="form-horizontal mt-4">
-                  <div class="form-group">
-                    <label
-                      >Default Text
-                      <span class="help"> e.g. "George deo"</span></label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      value="George deo..."
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label for="example-email"
-                      >Email
-                      <span class="help"> e.g. "example@gmail.com"</span></label
-                    >
-                    <input
-                      type="email"
-                      id="example-email"
-                      name="example-email"
-                      class="form-control"
-                      placeholder="Email"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Password</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      value="password"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Placeholder</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="placeholder"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Text area</label>
-                    <textarea class="form-control" rows="5"></textarea>
-                  </div>
-                  <div class="form-group">
-                    <label>Read only input</label>
-                    <input
-                      class="form-control"
-                      type="text"
-                      placeholder="Readonly input here…"
-                      readonly
-                    />
-                  </div>
-                  <div class="form-group">
-                    <fieldset disabled>
-                      <label for="disabledTextInput">Disabled input</label>
-                      <input
-                        type="text"
-                        id="disabledTextInput"
-                        class="form-control"
-                        placeholder="Disabled input"
-                      />
-                    </fieldset>
-                  </div>
-                  <div class="form-group row pt-3">
-                    <div class="col-sm-4">
-                      <div class="form-check">
-                        <input
-                          type="checkbox"
-                          class="form-check-input"
-                          id="customCheck1"
-                        />
-                        <label class="form-check-label mb-0" for="customCheck1"
-                          >Check this custom checkbox</label
-                        >
-                      </div>
-                      <div class="form-check">
-                        <input
-                          type="checkbox"
-                          class="form-check-input"
-                          id="customCheck2"
-                        />
-                        <label class="form-check-label mb-0" for="customCheck2"
-                          >Check this custom checkbox</label
-                        >
-                      </div>
-                      <div class="form-check">
-                        <input
-                          type="checkbox"
-                          class="form-check-input"
-                          id="customCheck3"
-                        />
-                        <label class="form-check-label mb-0" for="customCheck3"
-                          >Check this custom checkbox</label
-                        >
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="form-check">
-                        <input
-                          type="radio"
-                          id="customRadio1"
-                          name="customRadio"
-                          class="form-check-input"
-                        />
-                        <label class="form-check-label mb-0" for="customRadio1"
-                          >Toggle this custom radio</label
-                        >
-                      </div>
-                      <div class="form-check">
-                        <input
-                          type="radio"
-                          id="customRadio2"
-                          name="customRadio"
-                          class="form-check-input"
-                        />
-                        <label class="form-check-label mb-0" for="customRadio2"
-                          >Toggle this custom radio</label
-                        >
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Input Select</label>
-                    <select
-                      class="form-select shadow-none col-12"
-                      id="inlineFormCustomSelect"
-                    >
-                      <option selected>Choose...</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <label>Default file upload</label>
-                    <input type="file" class="form-control" />
-                  </div>
-                  <div class="form-group">
-                    <label>Custom File upload</label>
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">Upload</span>
-                      </div>
-                      <div class="custom-file">
-                        <input
-                          type="file"
-                          class="custom-file-input"
-                          id="inputGroupFile01"
-                        />
-                        <label class="custom-file-label" for="inputGroupFile01"
-                          >Choose file</label
-                        >
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Helping text</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Helping text"
-                    />
-                    <span class="help-block"
-                      ><small
-                        >A block of help text that breaks onto a new line and
-                        may extend beyond one line.</small
-                      ></span
-                    >
-                  </div>
-                </form>
+              <div class="card">
+                <div class="card-body">
+                  This is some text within a card block.
+                </div>
               </div>
             </div>
           </div>
@@ -550,16 +379,16 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="../../assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="../assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="../../dist/js/waves.js"></script>
+    <script src="../dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="../../dist/js/sidebarmenu.js"></script>
+    <script src="../dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="../../dist/js/custom.min.js"></script>
+    <script src="../dist/js/custom.min.js"></script>
   </body>
 </html>
