--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -228,7 +228,7 @@
                       <div class="overlay">
                         <a
                           class="btn btn-danger live-btn"
-                          href="https://demos.wrappixel.com/premium-admin-templates/bootstrap/nice-bootstrap/landingpage/index.html"
+                          href="https://www.wrappixel.com/templates/niceadmin/?ref33#demos"
                           target="_blank"
                           >Live Preview</a
                         >
