--- a/html/index.html
+++ b/html/index.html
@@ -155,7 +155,7 @@
                     placeholder="Search &amp; enter"
                   />
                   <a class="srh-btn">
-                    <i class="ti-close"></i>
+                    <i class="mdi mdi mdi-close"></i>
                   </a>
                 </form>
               </li>
@@ -194,13 +194,13 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account m-r-5 m-l-5"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet m-r-5 m-l-5"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email m-r-5 m-l-5"></i> Inbox</a
                   >
                 </ul>
               </li>
@@ -509,13 +509,13 @@
                         >
                         <span class="action-icons">
                           <a href="javascript:void(0)">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="mdi mdi-pencil-box-outline fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-check"></i>
+                            <i class="mdi mdi-check fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-heart"></i>
+                            <i class="mdi mdi-heart-outline fs-4"></i>
                           </a>
                         </span>
                       </div>
@@ -544,13 +544,15 @@
                         >
                         <span class="action-icons active">
                           <a href="javascript:void(0)">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="mdi mdi-pencil-box-outline fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="icon-close"></i>
+                            <i class="mdi mdi-window-close fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-heart text-danger"></i>
+                            <i
+                              class="mdi mdi-heart-outline fs-4 text-danger"
+                            ></i>
                           </a>
                         </span>
                       </div>
@@ -579,13 +581,13 @@
                         >
                         <span class="action-icons">
                           <a href="javascript:void(0)">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="mdi mdi-pencil-box-outline fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-check"></i>
+                            <i class="mdi mdi-check fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-heart"></i>
+                            <i class="mdi mdi-heart-outline fs-4"></i>
                           </a>
                         </span>
                       </div>
@@ -614,13 +616,13 @@
                         >
                         <span class="action-icons">
                           <a href="javascript:void(0)">
-                            <i class="ti-pencil-alt"></i>
+                            <i class="mdi mdi-pencil-box-outline fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-check"></i>
+                            <i class="mdi mdi-check fs-4"></i>
                           </a>
                           <a href="javascript:void(0)">
-                            <i class="ti-heart"></i>
+                            <i class="mdi mdi-heart-outline fs-4"></i>
                           </a>
                         </span>
                       </div>
@@ -634,17 +636,17 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Temp Guide</h4>
-                  <div class="d-flex align-items-center flex-row mt-4">
+                  <div class="d-flex align-items-center flex-row m-t-30">
                     <div class="display-5 text-info">
-                      <i class="wi wi-day-showers"></i>
+                      <i class="mdi mdi-weather-lightning-rainy"></i>
                       <span>73<sup>°</sup></span>
                     </div>
-                    <div class="ms-2">
-                      <h3 class="mb-0">Saturday</h3>
+                    <div class="m-l-10">
+                      <h3 class="m-b-0">Saturday</h3>
                       <small>Ahmedabad, India</small>
                     </div>
                   </div>
-                  <table class="table no-border mini-table mt-3">
+                  <table class="table no-border mini-table m-t-20">
                     <tbody>
                       <tr>
                         <td class="text-muted">Wind</td>
@@ -664,30 +666,34 @@
                       </tr>
                     </tbody>
                   </table>
-                  <ul class="row list-style-none text-center mt-4">
+                  <ul class="row list-style-none text-center m-t-30">
                     <li class="col-3">
-                      <h4 class="text-info"><i class="wi wi-day-sunny"></i></h4>
+                      <h4 class="text-info">
+                        <i class="mdi mdi-weather-sunny fs-3"></i>
+                      </h4>
                       <span class="d-block text-muted">09:30</span>
-                      <h3 class="mt-1">70<sup>°</sup></h3>
+                      <h3 class="m-t-5">70<sup>°</sup></h3>
                     </li>
                     <li class="col-3">
                       <h4 class="text-info">
-                        <i class="wi wi-day-cloudy"></i>
+                        <i class="mdi mdi-weather-partlycloudy fs-3"></i>
                       </h4>
                       <span class="d-block text-muted">11:30</span>
-                      <h3 class="mt-1">72<sup>°</sup></h3>
-                    </li>
-                    <li class="col-3">
-                      <h4 class="text-info"><i class="wi wi-day-hail"></i></h4>
-                      <span class="d-block text-muted">13:30</span>
-                      <h3 class="mt-1">75<sup>°</sup></h3>
+                      <h3 class="m-t-5">72<sup>°</sup></h3>
                     </li>
                     <li class="col-3">
                       <h4 class="text-info">
-                        <i class="wi wi-day-sprinkle"></i>
+                        <i class="mdi mdi-weather-pouring fs-3"></i>
+                      </h4>
+                      <span class="d-block text-muted">13:30</span>
+                      <h3 class="m-t-5">75<sup>°</sup></h3>
+                    </li>
+                    <li class="col-3">
+                      <h4 class="text-info">
+                        <i class="mdi mdi-weather-hail fs-3"></i>
                       </h4>
                       <span class="d-block text-muted">15:30</span>
-                      <h3 class="mt-1">76<sup>°</sup></h3>
+                      <h3 class="m-t-5">76<sup>°</sup></h3>
                     </li>
                   </ul>
                 </div>
