--- a/html/pages-profile.html
+++ b/html/pages-profile.html
@@ -150,7 +150,7 @@
                     placeholder="Search &amp; enter"
                   />
                   <a class="srh-btn">
-                    <i class="ti-close"></i>
+                    <i class="mdi mdi mdi-close"></i>
                   </a>
                 </form>
               </li>
@@ -189,13 +189,13 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-user me-1 ms-1"></i> My Profile</a
+                    ><i class="mdi mdi-account m-r-5 m-l-5"></i> My Profile</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-wallet me-1 ms-1"></i> My Balance</a
+                    ><i class="mdi mdi-wallet m-r-5 m-l-5"></i> My Balance</a
                   >
                   <a class="dropdown-item" href="javascript:void(0)"
-                    ><i class="ti-email me-1 ms-1"></i> Inbox</a
+                    ><i class="mdi mdi-email m-r-5 m-l-5"></i> Inbox</a
                   >
                 </ul>
               </li>
