--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -120,14 +120,20 @@
                         src="images/free-demo.jpg"
                         alt="Free version"
                       />
-                      <div class="overlay">
-                        <a
-                          class="btn btn-danger live-btn"
+                    </div>
+                    <div class="text-center mt-4">
+                      <a
+                          class="btn btn-danger btn-custom mb-2 mb-md-0"
                           href="https://demos.wrappixel.com/free-admin-templates/bootstrap/nice-bootstrap-free/html/index.html"
                           target="_blank"
                           >Live Preview</a
                         >
-                      </div>
+                      <a
+                        href="https://www.wrappixel.com/templates/niceadmin-lite/#comparison"
+                        class="btn btn-custom btn-info ms-2"
+                        target="_blank"
+                        >Free Download</a
+                      >
                     </div>
                     <p class="text-muted mt-5 line-h33 font-16">
                       Nice Admin Lite is basic yet very useful bootstrap 5
@@ -231,14 +237,6 @@
                         </ul>
                       </div>
                     </div>
-                    <div class="text-center mt-4 mb-3">
-                      <a
-                        href="https://www.wrappixel.com/templates/niceadmin-lite/#comparison"
-                        class="btn btn-custom btn-outline-info btn-lg"
-                        target="_blank"
-                        >Free Download</a
-                      >
-                    </div>
                   </div>
                 </div>
               </div>
@@ -258,14 +256,20 @@
                         src="images/pro-demo.jpg"
                         alt="Pro version"
                       />
-                      <div class="overlay">
-                        <a
-                          class="btn btn-danger live-btn"
+                    </div>
+                    <div class="text-center mt-4">
+                      <a
+                          class="btn btn-danger btn-custom mb-2 mb-md-0"
                           href="https://www.wrappixel.com/templates/niceadmin/?ref33#demos"
                           target="_blank"
                           >Live Preview</a
                         >
-                      </div>
+                      <a
+                        href="https://www.wrappixel.com/templates/niceadmin/?ref=33"
+                        class="btn btn-custom btn-info ms-2"
+                        target="_blank"
+                        >Buy Pro Version</a
+                      >
                     </div>
                     <div class="row text-dark mt-5">
                       <div class="col-md-6">
@@ -529,14 +533,6 @@
                           </li>
                         </ul>
                       </div>
-                    </div>
-                    <div class="text-center mt-4 mb-3">
-                      <a
-                        href="https://www.wrappixel.com/templates/niceadmin/?ref=33"
-                        class="btn btn-custom btn-info btn-lg"
-                        target="_blank"
-                        >Buy Pro Version</a
-                      >
                     </div>
                   </div>
                 </div>
